*Empty MediaWiki Message*

--- a/Дуванонь_буе.mw
+++ b/Дуванонь_буе.mw
@@ -30,7 +30,7 @@
   |Место по населению              = 
   |Плотность                       = 
   |Место по плотности              = 
-  |Национальный состав             = 
+  |Национальный состав             = [[рузт]], [[башкирт]], [[печкаст]], [[мордва]]
   |Конфессиональный состав         = 
  | Карта                          = Location of Duvanskiy rayon (Bashkortostan).svg
  | Размер карты                   = 
