*Empty MediaWiki Message*

--- a/ЛопаПарцун:Таксон%2Fdoc.mw
+++ b/ЛопаПарцун:Таксон%2Fdoc.mw
@@ -19,7 +19,7 @@
 -->
 {{TOC-Right}}
 == Описание ==
-Шаблон форматируется при помощи шаблона {{tl|Таксо-карточка}}. В своей работе использует ряд служебных шаблонов, см. категорию [[:Категория:Шаблоны:Шаблоны для шаблона Таксон|Шаблоны: Шаблоны для шаблона Таксон]].
+Шаблон форматируется при помощи шаблона {{tl|Таксопотмакс}}. В своей работе использует ряд служебных шаблонов, см. категорию [[:Категория:Шаблоны:Шаблоны для шаблона Таксон|Шаблоны: Шаблоны для шаблона Таксон]].
 
 === Параметры ===
 Обязательных параметров три: {{Oncolor|#ffffff||''regnum''}}, {{Oncolor|#ffffff||''rang''}} и {{Oncolor|#ffffff||''latin''}}.
@@ -729,7 +729,7 @@
 |}
 
 
-{{Таксономиясь}}
+{{t|Таксономиясь}}
 {{Биошаблоны}}
 
 == Примечания ==
