*Empty MediaWiki Message*

--- a/ЛопаПарцун:Таксон%2Fdoc.mw
+++ b/ЛопаПарцун:Таксон%2Fdoc.mw
@@ -67,7 +67,7 @@
 *** fo — ископаемые таксоны, без указания датировки существования;
 *** название одного из геохронологических периодов/подразделений, словарь допустимых значений находится [[Ш:Таксон/Геохронология|здесь]];
 *** положительное число менее 542 — время исчезновения организмов, входящих в таксон, (млн лет назад).
-:: <small><u>Примечание</u>: при непустом значении параметра ''Вымер'', знак «{{Вымер}}» в заголовке карточки организма будет установлен автоматически.</small>
+:: <small><u>Примечание</u>: при непустом значении параметра ''Вымер'', знак «{{Кулозь}}» в заголовке карточки организма будет установлен автоматически.</small>
 {{Слабо|<small>VII. Ссылки на базы данных — братские википроекты и авторитетные источники по биологической классификации</small>}}
 * ''wikispecies'' — название страницы на википроекте [[Викивиды]];
 * ''grin'' — идентификационный номер названия растения на сайте ''[[Germplasm Resources Information Network|GRIN]]'';
