*Empty MediaWiki Message*

--- a/ЛопаПарцун:Таксон%2Fdoc.mw
+++ b/ЛопаПарцун:Таксон%2Fdoc.mw
@@ -317,7 +317,7 @@
  |image file        = Drabař.jpg
  |image title       = Двугорбый верблюд
  |image descr       = 
- |regnum            = Животные
+ |regnum            = Ракшат
  |parent            = Camelus
  |rang              = Вид
  |latin             = Camelus bactrianus
@@ -344,7 +344,7 @@
  |image file        = Drabař.jpg
  |image title       = Двугорбый верблюд
  |image descr       = 
- |regnum            = Животные
+ |regnum            = Ракшат
  |parent            = Camelus
  |rang              = Вид
  |latin             = Camelus bactrianus
