*Empty MediaWiki Message*

--- a/ЛопаПарцун:Таксон%2Fdoc.mw
+++ b/ЛопаПарцун:Таксон%2Fdoc.mw
@@ -28,7 +28,7 @@
 
 {{Слабо|<small>I. Титульные название таксона и иллюстрация с подписью</small>}}
 * ''name'' — название таксона. В большинстве случаев параметр должен оставаться <u>пустым</u>. Заполняется только если название статьи по техническим причинам не совпадает с названием таксона, например — [[Адмирал (бабочка)]], или требуется специальное форматирование для записи научного названия штамма микроорганизмов, например — [[Bifidobacterium animalis subsp. lactis BB-12|''Bifidobacterium animalis'' subsp. ''lactis'' BB-12]]. 
-:: <small><u>Примечание</u>: для отметки названий вымерших организмов знаком «'''†'''» используйте параметр ''[[#Вымер|Вымер]]''.</small>  
+:: <small><u>Примечание</u>: для отметки названий вымерших организмов знаком «'''†'''» используйте параметр ''[[#Кулозь|Кулозь]]''.</small>  
 * ''image file'' — имя файла с изображением типичного представителя описываемого таксона;
 <!-- ** ''image title'' — описание изображения, видимое для тех, кто предпочитает или не имеет возможности загружать изображения (по умолчанию параметр не задан); -->
 ** ''image descr'' — текст под изображением (по умолчанию параметр не задан и никаких надписей на экран не выводится);
@@ -59,7 +59,7 @@
 {{Слабо|<small>VI. Геохронологическая информация</small>}}
 * ''Возник'' — время появления организмов, входящих в таксон, (млн лет назад); 
 *:Допустимые значения — положительные числа менее 542;
-* {{якорь|Вымер}}''Вымер'' — ключ вымершего таксона, не заполняется для организмов, существующих в наше время;
+* {{якорь|Кулозь}}''Кулозь'' — ключ вымершего таксона, не заполняется для организмов, существующих в наше время;
 *:Допустимые значения:
 ** Да, да — используются для вымерших таксонов с неустановленным (или неизвестным) временем существования;
 ** EX, Ex, ex — используются для таксонов, исчезнувших после 1500 года н. э.
