--- a/ЛопаПарцун:Таксон%2Fdoc.mw
+++ b/ЛопаПарцун:Таксон%2Fdoc.mw
@@ -26,14 +26,14 @@
 
 Все параметры, используемые в шаблоне Таксон, можно условно разделить на семь категорий по обеспечиваемым ими функциям:
 
-{{Слабо|<small>I. Титульные название таксона и иллюстрация с подписью</small>}}
+{{Лавшосто|<small>I. Титульные название таксона и иллюстрация с подписью</small>}}
 * ''name'' — название таксона. В большинстве случаев параметр должен оставаться <u>пустым</u>. Заполняется только если название статьи по техническим причинам не совпадает с названием таксона, например — [[Адмирал (бабочка)]], или требуется специальное форматирование для записи научного названия штамма микроорганизмов, например — [[Bifidobacterium animalis subsp. lactis BB-12|''Bifidobacterium animalis'' subsp. ''lactis'' BB-12]]. 
 :: <small><u>Примечание</u>: для отметки названий вымерших организмов знаком «'''†'''» используйте параметр ''[[#Кулозь|Кулозь]]''.</small>  
 * ''image file'' — имя файла с изображением типичного представителя описываемого таксона;
 <!-- ** ''image title'' — описание изображения, видимое для тех, кто предпочитает или не имеет возможности загружать изображения (по умолчанию параметр не задан); -->
 ** ''image descr'' — текст под изображением (по умолчанию параметр не задан и никаких надписей на экран не выводится);
 :* вместо двух перечисленных параметров можно использовать ''images_set'' для задания произвольного содержания, например, нескольких изображений (можно использовать {{tl|4 изображения}} или {{tl|2 изображения}}), пример см. в статье [[Однодольные]];
-{{Слабо|<small>II. Таксономическая и сопутствующая информация</small>}}
+{{Лавшосто|<small>II. Таксономическая и сопутствующая информация</small>}}
 * ''regnum'' — '''обязательный параметр''', [[Царство (биология)|царство живой природы]], возможные значения см. {{tl|Таксон/Цвет}};
 * ''parent'' — <u>необязательный параметр</u>, международное научное/латинское название ближайшего старшего (родительского) [[таксон]]а без указания его авторства (строка без викификации); заполнение обязательно в тех случаях, когда существует несколько таксонов с названием, указанным в параметре ''latin'' или для описываемого в статье таксона таксономический шаблон не нужен;
 * ''ref'' — <u>необязательный параметр</u>, текст для сноски к заголовку раздела «Научная классификация»;
@@ -44,19 +44,19 @@
 * ''typus'' — [[номенклатурный тип]] (викифицируется);
 * ''children name'' — название раздела со списком подчинённых (дочерних) таксонов; обычно это указание на ранг этих таксонов; викификация допустима;
 * ''children'' — список подчинённых (дочерних) таксонов, может занимать несколько строк; для оформления записей рекомендуется использовать шаблоны {{tl|btname}}, {{tl|bt}} или {{tl|bt-latrus2}};
-{{Слабо|<small>III. Визуальная информация об ареале таксона</small>}}
+{{Лавшосто|<small>III. Визуальная информация об ареале таксона</small>}}
 * ''range map'' — имя файла с картой распространения;
 ** ''range map caption'' — заголовок над картой («Ареал», если параметр не указан явно);
 ** ''range map width'' — ширина карты (250px, если параметр не указан явно);
 ** ''range legend'' — произвольный текст под картой, варианты использования:
 **: легенда карты, оформленная при помощи шаблона {{tl|Легенда2}};
 **: наложенные изображения карты и ареала с помощью шаблона {{tl|Superimpose}} (см. [[Чёрная мамба]]). 
-{{Слабо|<small>IV. Сведения об охранном статусе в Международной Красной Книге</small>}}
+{{Лавшосто|<small>IV. Сведения об охранном статусе в Международной Красной Книге</small>}}
 * ''iucnstatus'' — категория охранного статуса таксона в Международной Красной Книге. Информацию о возможных значениях этого параметра можно получить [[Шаблон:Таксон/IUCN|здесь]];
 * ''iucn'' — идентификационный номер таксона на сайте ''[[Всемирный союз охраны природы|IUCN]]'';
-{{Слабо|<small>V. Информация о внесистемной классификации вирусов по Балтимору</small>}}
+{{Лавшосто|<small>V. Информация о внесистемной классификации вирусов по Балтимору</small>}}
 * ''Baltimore group'' — номер группы зависимости от типа ДНК, РНК вируса и способа их репликации. Допустимые значения римские или арабские цифры от 1 до 7;
-{{Слабо|<small>VI. Геохронологическая информация</small>}}
+{{Лавшосто|<small>VI. Геохронологическая информация</small>}}
 * ''Возник'' — время появления организмов, входящих в таксон, (млн лет назад); 
 *:Допустимые значения — положительные числа менее 542;
 * {{якорь|Кулозь}}''Кулозь'' — ключ вымершего таксона, не заполняется для организмов, существующих в наше время;
@@ -68,7 +68,7 @@
 *** название одного из геохронологических периодов/подразделений, словарь допустимых значений находится [[Ш:Таксон/Геохронология|здесь]];
 *** положительное число менее 542 — время исчезновения организмов, входящих в таксон, (млн лет назад).
 :: <small><u>Примечание</u>: при непустом значении параметра ''Вымер'', знак «{{Кулозь}}» в заголовке карточки организма будет установлен автоматически.</small>
-{{Слабо|<small>VII. Ссылки на базы данных — братские википроекты и авторитетные источники по биологической классификации</small>}}
+{{Лавшосто|<small>VII. Ссылки на базы данных — братские википроекты и авторитетные источники по биологической классификации</small>}}
 * ''wikispecies'' — название страницы на википроекте [[Викивиды]];
 * ''grin'' — идентификационный номер названия растения на сайте ''[[Germplasm Resources Information Network|GRIN]]'';
 Следующие параметры заполняются, если их значения не совпадают с записанными в соответствующем элементе [[Викиданные|Викиданных]] (например, если статья, описывающая вид из монотипного (монотипического) рода, связана с элементом Викиданных, относящимся к роду).
