*Empty MediaWiki Message*

--- a/ЛопаПарцун:Таксон%2Fdoc.mw
+++ b/ЛопаПарцун:Таксон%2Fdoc.mw
@@ -34,7 +34,7 @@
 ** ''image descr'' — текст под изображением (по умолчанию параметр не задан и никаких надписей на экран не выводится);
 :* вместо двух перечисленных параметров можно использовать ''images_set'' для задания произвольного содержания, например, нескольких изображений (можно использовать {{tl|4 изображения}} или {{tl|2 изображения}}), пример см. в статье [[Однодольные]];
 {{Лавшосто|<small>II. Таксономическая и сопутствующая информация</small>}}
-* ''regnum'' — '''обязательный параметр''', [[Царство (биология)|царство живой природы]], возможные значения см. {{tl|Таксон/Цвет}};
+* ''regnum'' — '''обязательный параметр''', [[Царство (биология)|царство живой природы]], возможные значения см. {{tl|Таксон/Тюс}};
 * ''parent'' — <u>необязательный параметр</u>, международное научное/латинское название ближайшего старшего (родительского) [[таксон]]а без указания его авторства (строка без викификации); заполнение обязательно в тех случаях, когда существует несколько таксонов с названием, указанным в параметре ''latin'' или для описываемого в статье таксона таксономический шаблон не нужен;
 * ''ref'' — <u>необязательный параметр</u>, текст для сноски к заголовку раздела «Научная классификация»;
 * ''rang'' — '''обязательный параметр''', [[Ранг (биологическая систематика)|ранг таксона]] (строка без викификации), одно из значений: см. [[Биологическая систематика#Иерархия]] или шаблон {{tl|Таксономия}};
